# live-scoreboard

./: .gitignore  Cargo.toml  README.md  config.json  config2.json  package-lock.json  package.json
assets/css/: bracket.css  rounds.css  scoreboard.css  styles.css
assets/js/: bracket.js
sloverwatch/: collegiate.json  slowl_2024.json
sloverwatch/assets/css/: bracket.css  rounds.css  scoreboard.css  waiting.css
sloverwatch/templates/: rounds.html  scoreboard.html  team.html  waiting.html
sloverwatch_collegiate/: config.json
sloverwatch_collegiate/assets/css/: team.css  waiting.css
sloverwatch_collegiate/templates/: rounds.html  scoreboard.html
src/: app.html  error.rs  fs.rs  lib.rs  main.rs  models.rs  ui.rs  webserver.rs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/icons/: ls_logo.ai
src-tauri/src/: fs.rs  lib.rs  models.rs  webserver.rs
src-tauri/src/webserver/: routes.rs
src/lib/: Container.svelte  EditableList.svelte  MaybeIcon.svelte  Modal.svelte  ModalForm.svelte  Section.svelte  api.ts  models.ts  util.ts
src/routes/: +page.svelte  AssetsPage.svelte  BracketMatchup.svelte  BracketPage.svelte  CurrentMatchPage.svelte  ResourcesPage.svelte  SettingsPage.svelte  SideNav.svelte  TeamsPage.svelte
src/ui/: assets.rs  bracket.rs  components.rs  entry_window.rs  pages.rs  settings.rs  synced_list_box.rs  teams.rs  util.rs
src/ui/components/: refresh_box.rs
src/ui/pages/: assets.rs  bracket.rs  current_match.rs  settings.rs  teams.rs
src/webserver/: routes.rs
templates/: bracket.html  rounds.html  scoreboard.html  team.html
