[package]
name = "live-scoreboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.38.0", features = ["full"] }
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
serde_json = "1.0.120"
